Sat Jul 11 15:58:16 UTC 2009 / Charles Lepple <clepple@gmail.com>

 * Makefile.am: Add "." to "find" command

Sat Jul 11 14:25:00 UTC 2009 / Charles Lepple <clepple@gmail.com>

 * drivers/nut_usb.c: Add usb_strerror() to USB error messages.

Tue Jul  7 11:06:32 UTC 2009 / Arnaud Quette <ArnaudQuette@Eaton.com>

 * device collection completion, for the transition period
   - drivers/main.c: remap device.{mfr,model,serial} from the ups.*
     equivalent, and preset device.type to ups so that it only has to be
     overriden if necessary.
   - drivers/skel.c: some update for the device collection
   - docs/new-names.txt: add the device collection description

Mon Jul  6 09:28:10 UTC 2009 / Arnaud Quette <ArnaudQuette@Eaton.com>

 - drivers/tripplite.c: fix the reading with some SmartUPS models
   (patch from Robert Waldie, Opengear)

Tue Jun 30 13:28:42 UTC 2009 / Arnaud Quette <ArnaudQuette@Eaton.com>

 - drivers/baytechmib.h: add outlet.{current,voltage} and fix some
   comments (from Scott Burns, Opengear)

Wed May 27 20:35:41 UTC 2009 / Arjen de Korte <arjen@de-korte.org>

 - clients/upsmon.c: multilevel debug information (similar to other NUT
   binaries)

Mon May 25 19:53:02 UTC 2009 / Arjen de Korte <arjen@de-korte.org>

 * Enable timestamp on debug messages by default
   - common/common.c: prepend elapsed number of seconds and microseconds
     since start of program for upsdebug() messages,
   - drivers/upsdrvctl.c: inform people that adding debug flags to upsdrvctl
     is not the way to debug a driver,     
   - revert remainder of previous patch
   
Mon May 18 11:48:31 UTC 2009 / Arnaud Quette <ArnaudQuette@Eaton.com>

 * Enable timestamp on output messages (format "%H:%M:%S: msg")
   - common/common.c, include/common.h: modify vupslog() to allow optional
     appending of a timestamp on debug output,
   - clients/upsmon.c, drivers/main.c, drivers/upsdrvctl.c, server/upsd.c:
     enable timestamping using the "-T" option,