@@ -34,7 +34,7 @@ SERIAL_DRIVERLIST = apcsmart bcmxcp belkin belkinunv bestfcom	\
  gamatronic genericups isbmex liebert masterguard megatec metasys 	\
  mge-shut mge-utalk microdowell newmge-shut oneac optiups powercom rhino 	\
  safenet skel solis tripplite tripplitesu upscode2 victronups powerpanel \
- blazer_ser virtual
+ blazer_ser clone
 SNMP_DRIVERLIST = snmp-ups
 USB_LIBUSB_DRIVERLIST = usbhid-ups bcmxcp_usb tripplite_usb megatec_usb \
  blazer_usb richcomm_usb
